--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -12,8 +12,7 @@ $header-textfield-background-color: #f5f6fa !default;
 $header-textfield-magnifier-color: $header-links-color !default;
 $header-link-horizontal-padding: 0.71rem;
 $navbar-logo-height: auto !default;
-$navbar-logo-width: auto !default;
-$header-logo-text-color: #333 !default;
+$navbar-logo-width: 32px !default;
 
 .navbar.navbar-primary {
   background-color: $header-background-color;
